Avoid 'Skip to timeline' button appearing overlapping the navbar

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -96,6 +96,7 @@ footer.page-footer
     padding-left: 10px
 
 header.page-header.timeline-page
+  position: relative
   padding-bottom: 0
 
   .constrain-width
